add edittext view to main activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.codeclan.example.chordisto.MainActivity">
+
+    <EditText
+        android:id="@+id/chord_input_area"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/chord_input_hint"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp" />
 
     <Button
         android:id="@+id/buttonPlayChord"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/playButtonText"
-        />
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp" />
 
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
