--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,17 +12,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/chord_input_hint"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp" />
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="0dp" />
+
+    <EditText
+        android:id="@+id/tempo_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/tempo_hint"
+        android:inputType="number" />
 
     <Button
         android:id="@+id/buttonPlayChord"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/playButtonText"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp" />
-
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="0dp" />
 
 
 </LinearLayout>
