--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,17 @@
         android:hint="@string/tempo_hint"
         android:inputType="number" />
 
+    <EditText
+        android:id="@+id/loops_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/number_of_loops_hint"
+        android:inputType="number"
+        />
+
     <Button
         android:id="@+id/buttonPlayChord"
+        android:onClick="playMusic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/playButtonText"
