crud functions added to database helper

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
     <Button
         android:id="@+id/save_to_songbook_button"
         android:onClick="saveToSongBook"
+        android:text="Save to Songbook"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
