--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item
+        android:id="@+id/play"
+        android:enabled="true"
+        android:icon="@drawable/ic_music_note_white_24dp"
+        android:title="Friends"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/book"
+        android:enabled="true"
+        android:icon="@drawable/ic_library_books_white_24dp"
+        android:title="Friends"
+        app:showAsAction="ifRoom" />
 </menu>
