--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,5 +55,11 @@
         android:layout_height="wrap_content" />
 
 
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_nav"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        app:menu="@menu/bottom_navigation"
+        />
 
 </LinearLayout>
