--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -3,16 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/play"
+        android:id="@+id/music_screen_button"
         android:enabled="true"
         android:icon="@drawable/ic_music_note_white_24dp"
         android:title="Friends"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/book"
+        android:id="@+id/songbook_button"
         android:enabled="true"
         android:icon="@drawable/ic_library_books_white_24dp"
         android:title="Friends"
         app:showAsAction="ifRoom" />
+
 </menu>
