--- a/app/src/main/res/layout/activity_songbook.xml
+++ b/app/src/main/res/layout/activity_songbook.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,8 +10,18 @@
     <ListView
         android:id="@+id/songbook_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        />
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_nav"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        app:menu="@menu/bottom_navigation"
+        android:layout_alignParentBottom="true"
+        />
 
 
-    </ListView>
-</LinearLayout>
+
+</RelativeLayout>
