--- a/app/src/main/res/layout/activity_songbook.xml
+++ b/app/src/main/res/layout/activity_songbook.xml
@@ -14,13 +14,13 @@
         android:layout_alignParentTop="true"
         />
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bottom_nav"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        app:menu="@menu/bottom_navigation"
-        android:layout_alignParentBottom="true"
-        />
+    <!--<android.support.design.widget.BottomNavigationView-->
+        <!--android:id="@+id/bottom_nav"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_width="match_parent"-->
+        <!--app:menu="@menu/bottom_navigation"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--/>-->
 
 
 
