--- a/app/src/main/res/layout/activity_save_and_edit_activty.xml
+++ b/app/src/main/res/layout/activity_save_and_edit_activty.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.codeclan.example.chordisto.SaveAndEditActivity">
+    tools:context=".android.activity.SaveAndEditActivity">
 
     <EditText
         android:id="@+id/song_title_save"
